--- a/todo_list/todo/templates/todo/task_list.html
+++ b/todo_list/todo/templates/todo/task_list.html
@@ -9,13 +9,13 @@
 		{% for task in tasks %}
 			<li><a href="{% url 'task' task.id %}" class="{% if task.completed%}completed{%endif%}">{{ task.title }}</a> 
 				 <div  class="task-controls">
-				 	<a href="#"><i class="bi bi-trash"></i> </a>
-					<a href="#"><i class="bi bi-pencil-square"></i></a>
+				 	<a href="{%url 'task-delete' task.id %}"><i class="bi bi-trash"></i> </a>
+					<a href="{%url 'task-update' task.id %}"><i class="bi bi-pencil-square"></i></a>
 		         </div>
 		    </li>
 		{% endfor %}
 	{% else %}
-		<p>🎉 Yay, you have no pending tasks!</p>
+		<p>🎉 Yay, you have no pending tasks! <a href="{%url 'task-create'%}">Create Task</a></p>
 	{% endif %}
 	</ul>
 </div>
